fixed some styling.
not finished yet

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 }
 
 a:hover{
-    color: var(--pink) !important;
+    color: var(--pink) ;
 }
 
 .app{
@@ -59,13 +59,13 @@ a:hover{
    color: white;
 }
 .menu-control-container{
-    display: none !important;
-    position: absolute !important;
-    right: 10px !important;
-    top: 25px !important;
-    font-size: 1.2rem !important;
-    background-color: var(--bgSecondary) !important;
-    border: none !important;
+    display: none;
+    position: absolute;
+    right: 10px;
+    top: 25px;
+    font-size: 1.2rem ;
+    background-color: var(--bgSecondary);
+    border: none;
 }
 
 .loader{
@@ -119,7 +119,7 @@ a:hover{
     }
 
     .menu-control-container{
-        display: block !important;
+        display: block ;
     }
 
     .ant-menu{
@@ -127,10 +127,10 @@ a:hover{
         right: 0px;
     }
     .home-title{
-        font-size: 1.4rem !important;
+        font-size: 1.4rem ;
     }
     .show-more{
-        font-size: 1.3rem !important;
+        font-size: 1.3rem ;
     }
 }
 
@@ -175,9 +175,9 @@ a:hover{
 }
 
 .coin-details-heading{
-    font-weight: 700 !important;
-    margin-top: 20px !important;
-    color: var(--pink) !important;
+    font-weight: 700 ;
+    margin-top: 20px ;
+    color: var(--pink) ;
 }
 
 .coin-stats{
@@ -292,11 +292,11 @@ a:hover{
     width: 180px;
 }
 .news-card{
-    min-height: 300px !important;
+    min-height: 300px ;
 }
 .news-image-container{
-    display: flex !important;
-    justify-content: space-between !important;
+    display: flex ;
+    justify-content: space-between ;
 }
 .news-title{
 width: 70%;
@@ -308,7 +308,7 @@ width: 70%;
 }
 .news-card p{
     color: black;
-    margin: 10px 0px !important;
+    margin: 10px 0px ;
 }
 .provider-container{
     display: flex;
@@ -325,20 +325,20 @@ width: 70%;
     color: #0071bd;
 }
 .chart-title{
-    color: #0071bd !important;
+    color: #0071bd ;
 }
 .price-container{
-    display: flex !important;
-    gap: 20px !important;
-    align-items: center !important;
-    flex-wrap: wrap !important;
+    display: flex ;
+    gap: 20px ;
+    align-items: center ;
+    flex-wrap: wrap ;
 }
 .price-change{
-    font-weight: 900 !important;
+    font-weight: 900 ;
 }
 .current-price{
-    margin-top: 0px !important;
-    font-weight: 900 !important;
+    margin-top: 0px ;
+    font-weight: 900 ;
 }
 .home-heading-container{
     display: flex;
@@ -347,17 +347,17 @@ width: 70%;
     margin-top: 40px;
 }
 .show-more{
-    margin-top: 0px !important;
+    margin-top: 0px ;
 }
 .exchange-image{
-    margin: 0px 10px !important;
+    margin: 0px 10px ;
 }
 .search-crypto{
     margin: 20px auto 30px auto;
     width: 250px;
 }
 .crypto-card-container{
-    min-height: 65vh !important;
+    min-height: 65vh ;
 }
 .crypto-card{
     min-width: 250px;
@@ -366,8 +366,8 @@ width: 70%;
     width:35px;
 }
 .select-timeperiod{
-    width: 200px !important;
-    margin-top: 20px !important;
+    width: 200px ;
+    margin-top: 20px ;
 }
 
 .footer {
